--- a/ORCSG4/RobotG4/AboutForm.resx
+++ b/ORCSG4/RobotG4/AboutForm.resx
@@ -124,7 +124,8 @@
   - LiPol Battery charger
   - Audio and Video Stream
   - Laser Pointing
-  - LED Light and Nightvision</value>
+  - LED Light and Nightvision
+  - MEMS Implementation</value>
   </data>
   <data name="label6.Text" xml:space="preserve">
     <value>Kamil Zidek (TUKE, Sjf) Founder
